--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.datasource.url = jdbc:postgresql://containers-us-west-171.railway.app:609
 spring.datasource.username = postgres
 spring.datasource.password = bzdqMGyOhpvZs2rPoE7g
 spring.database.driverClassName = org.postgresql.Driver
+
+spring.main.allow-circular-references=true
